--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,9 @@
     <string name="geocoderFail">Google Geocoder failed! Please restart the app.</string>
     <string name="encerrar_inspecao">Encerrar Inspeção</string>
     <string name="dialog_save_inspecao_question">Deseja salvar o resultado da inspeção?</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tv_historico_inspecoes">Histórico de Inspeções</string>
+    <string name="btn_deletar">Deletar</string>
 </resources>
